--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.1.0",
     "gulp-svgstore": "^7.0.1",
+    "gulp-uglify": "^3.0.2",
     "gulp-webp": "^4.0.1",
     "npm": "^6.14.8",
     "postcss": "^8.1.1",
